<resources>
    <string name="app_name">covid-all</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dhruvi_and_mayank">by_#dhruvi_and_#mayank</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="already_account">already account?</string>
    <string name="confirm_password">confirm password</string>
    <string name="do_not_an_account">Do Not an Have Account?</string>
    <string name="sign_in">sign in</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="tiffin">Tiffin</string>
    <string name="hospital_all">Hospital All</string>
    <string name="funeral_car">Funeral Car</string>
    <string name="madicines">Medicines</string>
    <string name="vaccine_slot">Vaccine Slot</string>
    <string name="other">Other</string>
    <string name="awareness">Awareness</string>
    <string name="news">News</string>
</resources>