<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/wrapper"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Toolbar
            android:id="@+id/toolbar"
            android:onClick="toolmenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:logo="@drawable/ic_menu"
            tools:ignore="MissingConstraints"

            tools:targetApi="lollipop">


        </Toolbar>

        <ImageView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="logout"
            android:layout_marginTop="60dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_logout"
            app:layout_constraintBottom_toTopOf="@+id/toolbar"
            app:layout_constraintRight_toRightOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="229dp"
            android:layout_marginRight="229dp"
            android:text="To help COVID"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="229dp"
            android:layout_marginRight="229dp"
            android:text="GIT vs COVID Ideathon' 21. "
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="174dp"
            android:layout_height="89dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/new_normality" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="21dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            >
            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="160dp"

                android:orientation="horizontal"
                android:padding="10dp"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardElevation="9dp"
                    app:cardMaxElevation="9dp" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/Itifin"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="9dp"
                            android:onClick="itifin"
                            app:srcCompat="@drawable/tiffin" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Itifin"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="9dp"
                            android:text="@string/tiffin"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardElevation="9dp"
                    app:cardMaxElevation="9dp" >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/Ihospital"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="9dp"
                            android:onClick="ihospital"
                            app:srcCompat="@drawable/health_insurance" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Ihospital"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="9dp"
                            android:text="@string/hospital_all"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout

                android:id="@+id/l2"
                android:layout_width="match_parent"
                android:layout_height="160dp"

                android:orientation="horizontal"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardElevation="9dp"
                    app:cardMaxElevation="9dp" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/Ifuneralcar"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="9dp"
                            android:onClick="ifuneralcar"
                            app:srcCompat="@drawable/hearse" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Ifuneralcar"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="9dp"
                            android:text="@string/funeral_car"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardElevation="9dp"
                    app:cardMaxElevation="9dp" >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/Imadicines"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="9dp"
                            android:onClick="imadicines"
                            app:srcCompat="@drawable/vitamin" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Imadicines"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="9dp"
                            android:text="@string/madicines"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/l3"
                android:layout_width="match_parent"
                android:layout_height="160dp"

                android:orientation="horizontal"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardElevation="9dp"
                    app:cardMaxElevation="9dp" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/Ivaccine_slot"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="9dp"
                            android:onClick="islot"
                            android:visibility="visible"
                            app:srcCompat="@drawable/vaccine" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Ivaccine_slot"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="9dp"
                            android:text="@string/vaccine_slot"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardElevation="9dp"
                    app:cardMaxElevation="9dp" >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/Iother"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="9dp"
                            android:onClick="other"
                            app:srcCompat="@drawable/layers" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Iother"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="9dp"
                            android:text="@string/other"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>